Change folder edit dialog

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -269,6 +269,28 @@ duplicate=Duplizieren
 duplicateProject=Projekt duplizieren
 duration=Laufzeit
 editDocket=Laufzettel bearbeiten
+editFolderDialog.caption.add=Unterordner hinzuf\u00FCgen
+editFolderDialog.caption.edit=Unterordner bearbeiten
+editFolderDialog.copyFolder=Beim DMS-Export kopieren
+editFolderDialog.createFolder=Leeren Ordner bei der Vorgangserstellung anlegen
+editFolderDialog.derivative=Skalierung
+editFolderDialog.dpi=Auflösung
+editFolderDialog.fileGroup=METS-Filegroup
+editFolderDialog.generator.derivative=Derivat erstellen
+editFolderDialog.generator.dpi=DPI \u00E4ndern
+editFolderDialog.generator.imageScale=Web-Bild erstellen (%)
+editFolderDialog.generator.imageSize=Web-Bild erstellen (Breite px)
+editFolderDialog.generator=Bilder generieren
+editFolderDialog.imageScale=Skalierung
+editFolderDialog.imageSize=Breite
+editFolderDialog.linkingMode.ALL=Alle Dateien
+editFolderDialog.linkingMode.EXISTING=Nur tats\u00E4chlich existierende Dateien
+editFolderDialog.linkingMode.NO=Nein
+editFolderDialog.linkingMode.PREVIEW_IMAGE=Nur ausgew\u00E4hltes Vorschaubild
+editFolderDialog.linkingMode=In METS-Datei verlinken
+editFolderDialog.mimeType=Dateityp
+editFolderDialog.path=Ordner
+editFolderDialog.urlStructure=METS-Pfad
 editMetadataGroup=Metadatengruppe bearbeiten
 editTemplate=Vorlage bearbeiten
 editWorkflow=Workflow bearbeiten
@@ -335,16 +357,13 @@ newFileName=Neuer Dateiname
 fileManipulation=Austausch von Dateien
 fileUpload=Datei hochladen
 filegroup=Dateigruppe
-fileGroupAdd=Dateigruppe hinzuf\u00FCgen
 fileGroupDelete=Dateigruppe l\u00F6schen
-fileGroupEdit=Dateigruppe bearbeiten
 filename=Dateiname
 filter=Filter
 filterAnpassen=Filter anpassen
 filterAnwenden=Filter anwenden
 finished=Beendet
 firstPage=Erste Seite
-folder=Validierung gegen Ordner
 folderImport=Import aus Verzeichnis
 formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
@@ -521,7 +540,6 @@ metsRightsOwnerLogo=METS Rechteinhaber Logo
 metsRightsOwnerMail=METS Rechteinhaber Kontakt
 metsRightsOwnerSite=METS Rechteinhaber URL
 metsfilegroups=METS Dateigruppen
-mimetype=Mime Typ
 missingData=Unvollst\u00E4ndige Daten
 missingPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
 modeler=BPMN Modeler
@@ -531,7 +549,6 @@ month=Monat
 months=Monate
 multiTiffDownloaden=Multipage-Tiff downloaden
 multipleBatchesAssigned=Dieser Vorgang ist mehreren Batches zugeordnet. Um diese Funktion zu nutzen, darf der Vorgang nur genau einem Batch zugeordnet sein.
-name=Name
 neu=Neuen Datensatz anlegen
 neueBenutzergruppeAnlegen=Neue Benutzergruppe anlegen
 neueLdapgruppeAnlegen=Neue LDAP-Gruppe anlegen
@@ -601,7 +618,6 @@ password=Passwort
 passwordsDontMatch=Die eingegebenen Passw\u00F6rter stimmen nicht \u00FCberein!
 passwordChange=Passwort \u00E4ndern
 passwordChanged=Das Passwort wurde erfolgreich ge\u00E4ndert.
-path=Pfad
 personBearbeiten=Person bearbeiten
 person=Person
 personen=Personen
@@ -742,7 +758,6 @@ strukturdatenBearbeiten=Strukturdaten bearbeiten
 structureElementAdd=Strukturelement hinzuf\u00FCgen
 structureElementDelete=Strukturelement l\u00F6schen
 strukturelementVerschiebenErlaeuterung=W\u00E4hlen Sie nun die Stelle aus, an die das gew\u00E4hlte Strukturelement verschoben werden soll.
-suffix=Suffix
 system=System
 table=Tabelle
 tableSize=Tabellengr\u00F6\u00DFe
@@ -799,7 +814,6 @@ uploadFailed=Das Hochladen ist fehlgeschlagen.
 uploadFile=Datei hochladen
 uploadImport=Dateiupload-Import
 uriMalformed=Der URI hat ein falsches Format.
-useForPreviewImage=Nur ausgew\u00E4hltes Vorschaubild verlinken
 user=Benutzer
 username=Benutzername
 users=Benutzer
