--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -268,6 +268,28 @@ duplicate=duplicate
 duplicateProject=Duplicate project
 duration=Duration
 editDocket=edit docket
+editFolderDialog.caption.add=Add subfolder
+editFolderDialog.caption.edit=Edit subfolder
+editFolderDialog.copyFolder=Copy on DMS export
+editFolderDialog.createFolder=Create empty folder on process creation
+editFolderDialog.derivative=Scale
+editFolderDialog.dpi=Resolution
+editFolderDialog.fileGroup=METS filegroup
+editFolderDialog.generator.derivative=Create derivative
+editFolderDialog.generator.dpi=Change DPI
+editFolderDialog.generator.imageScale=Create web image (%)
+editFolderDialog.generator.imageSize=Create web image (width px)
+editFolderDialog.generator=Generate images
+editFolderDialog.imageScale=Scale
+editFolderDialog.imageSize=Width
+editFolderDialog.linkingMode.ALL=All files
+editFolderDialog.linkingMode.EXISTING=Only really existing files
+editFolderDialog.linkingMode.NO=No
+editFolderDialog.linkingMode.PREVIEW_IMAGE=Only selected preview image
+editFolderDialog.linkingMode=Link in METS file
+editFolderDialog.mimeType=File type
+editFolderDialog.path=Folder
+editFolderDialog.urlStructure=METS path
 editMetadataGroup=Edit metadata group
 editTemplate=Edit template
 editWorkflow=Edit workflow
@@ -333,16 +355,13 @@ fileExists=A file with the name {0} already exists. Therefore, this file can not
 fileManipulation=Exchange of files
 fileUpload=Upload files
 filegroup=File group
-fileGroupAdd=Add file group
 fileGroupDelete=Delete file group
-fileGroupEdit=Edit file group
 filename=File name
 filter=Filter
 filterAnpassen=adjust filter
 filterAnwenden=Apply filter
 finished=Finished
 firstPage=First page
-folder=validation against folder
 folderImport=import from folder
 formConfigurationMismatch=Form configuration mismatch\:
 from=from
@@ -519,7 +538,6 @@ metsRightsOwnerLogo=METS rights owner logo
 metsRightsOwnerMail=METS rights owner contact
 metsRightsOwnerSite=METS rights owner URL
 metsfilegroups=METS file groups
-mimetype=Mime type
 missingData=incomplete data
 missingPlugin=Please select a Plugin.
 modeler=BPMN Modeler
@@ -529,7 +547,6 @@ month=month
 months=months
 multiTiffDownloaden=Download multi-page tiff
 multipleBatchesAssigned=This process is assigned to multiple batches. To use this feature, it must be assigned to only one batch.
-name=Name
 neu=Create new record set
 neueBenutzergruppeAnlegen=Create new user group
 neueLdapgruppeAnlegen=Create new LDAP group
@@ -600,7 +617,6 @@ password=Password
 passwordsDontMatch=The passwords you entered do not match!
 passwordChange=Change password
 passwordChanged=The password has been changed.
-path=Path
 person=Person
 personBearbeiten=Edit person
 personen=Persons
@@ -740,7 +756,6 @@ strukturdatenBearbeiten=Edit structure data
 structureElementAdd=Add docstruct
 structureElementDelete=Delete docstruct
 strukturelementVerschiebenErlaeuterung=Please select the node where the selected docstruct should be pasted.
-suffix=Suffix
 system=System
 table=Table
 tableSize=Table size
@@ -797,7 +812,6 @@ uploadFailed=Upload failed.
 uploadFile=upload file
 uploadImport=file upload import
 uriMalformed=The URI is malformed.
-useForPreviewImage=Link selected preview image only
 user=User
 username=Username
 users=Users
