Use media types from config file

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -221,6 +221,7 @@ currentRepresentative=Aktueller Repr\u00E4sentant\:
 dataCopier.runtimeException=Fehler beim Kopieren der Daten\:
 dataCopier.syntaxError=Die Datenkopierregel hat ein falsches Format\:
 file=Datei
+fileGroupAdd=Unterordner hinzuf\u00FCgen
 dashboard=Dashboard
 dataPrivacy=Datenschutz
 databaseStatistic=Datenbankstatistik
@@ -539,7 +540,7 @@ metsRightsOwner=METS Rechteinhaber
 metsRightsOwnerLogo=METS Rechteinhaber Logo
 metsRightsOwnerMail=METS Rechteinhaber Kontakt
 metsRightsOwnerSite=METS Rechteinhaber URL
-metsfilegroups=METS Dateigruppen
+metsfilegroups=Unterordner und METS Dateigruppen
 missingData=Unvollst\u00E4ndige Daten
 missingPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
 modeler=BPMN Modeler
