--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -220,6 +220,7 @@ currentRepresentative=Current representative\:
 dataCopier.runtimeException=Copying the data failed\:
 dataCopier.syntaxError=The data copying rule is malformed\:
 file=File
+fileGroupAdd=Add sub-folder
 dashboard=Dashboard
 dataPrivacy=Data privacy
 databaseStatistic=Database statistics
@@ -537,7 +538,7 @@ metsRightsOwner=METS rights owner
 metsRightsOwnerLogo=METS rights owner logo
 metsRightsOwnerMail=METS rights owner contact
 metsRightsOwnerSite=METS rights owner URL
-metsfilegroups=METS file groups
+metsfilegroups=Sub-folders and METS file groups
 missingData=incomplete data
 missingPlugin=Please select a Plugin.
 modeler=BPMN Modeler
