Add selector for generation source folder to the GUI

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -364,6 +364,9 @@ filterAnwenden=Apply filter
 finished=Finished
 firstPage=First page
 folderImport=import from folder
+folderUse=Folder use
+folderUse.createFolderToSelectOne=Create a folder to select one
+folderUse.generatorSource=Use as source to generate contents
 formConfigurationMismatch=Form configuration mismatch\:
 from=from
 generate=Generate
