--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -366,6 +366,9 @@ filterAnwenden=Filter anwenden
 finished=Beendet
 firstPage=Erste Seite
 folderImport=Import aus Verzeichnis
+folderUse=Ordnerverwendung
+folderUse.createFolderToSelectOne=Erstellen Sie einen Ordner, um einen auszuw\u004Ehlen
+folderUse.generatorSource=Als Quelle zum Generieren von Inhalten verwenden
 formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 generate=Generieren
