--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -295,7 +295,7 @@ editMetadataGroup=Metadatengruppe bearbeiten
 editTemplate=Vorlage bearbeiten
 editWorkflow=Workflow bearbeiten
 editor=Editor
-eineKopieDieserProzessvorlageAnlegen=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
+createProcessFromTemplate=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
 eineNeueProzessvorlageAnlegen=Eine neue Produktionsvorlage anlegen
 einenNeuenProzessAnlegen=Einen neuen Vorgang anlegen
 elasticSearchNotRunning=Der Elasticsearch Server ist nicht erreichbar.
@@ -674,8 +674,8 @@ propertyEdit=Eigenschaft bearbeiten
 propertyNotSaved=Eigenschaft konnte nicht gespeichert werden.
 propertySaved=Eigenschaft wurde gespeichert.
 prozessvorlage=Produktionsvorlage
-prozessvorlageMitUnvollstaendigenSchrittdetails=Diese Vorgangsvorlage enth\u00E4lt Schritte mit unvollst\u00E4ndigen Angaben
-prozessvorlagen=Produktionsvorlagen
+templateNotAvailableForProcess=Diese Vorgangsvorlage enth\u00E4lt Schritte mit unvollst\u00E4ndigen Angaben oder ist nicht aktiv.
+templates=Produktionsvorlagen
 quarter=Quartal
 quarters=Quartale
 queryOPAC=OPAC abfragen
