--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -294,7 +294,7 @@ editMetadataGroup=Edit metadata group
 editTemplate=Edit template
 editWorkflow=Edit workflow
 editor=Editor
-eineKopieDieserProzessvorlageAnlegen=Create process from this process template
+createProcessFromTemplate=Create process from this process template
 eineNeueProzessvorlageAnlegen=Create new process template
 einenNeuenProzessAnlegen=Create new process
 elasticSearchNotRunning=The elastic search server is not running
@@ -672,8 +672,8 @@ propertyEdit=Edit property
 propertyNotSaved=Property could not be saved.
 propertySaved=Property saved.
 prozessvorlage=Process template
-prozessvorlageMitUnvollstaendigenSchrittdetails=This process template contains tasks with incomplete details.
-prozessvorlagen=Process templates
+templateNotAvailableForProcess=This process template contains tasks with incomplete details or is inactive.
+templates=Process templates
 quarter=quarter
 quarters=quarters
 queryOPAC=Query OPAC
