Have three folder boxes for preview, media view and generator

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -367,8 +367,12 @@ finished=Beendet
 firstPage=Erste Seite
 folderImport=Import aus Verzeichnis
 folderUse=Ordnerverwendung
-folderUse.createFolderToSelectOne=Erstellen Sie einen Ordner, um einen auszuw\u004Ehlen
 folderUse.generatorSource=Als Quelle zum Generieren von Inhalten verwenden
+folderUse.generatorSource.disabled=Generieren von Inhalten deaktiviert
+folderUse.mediaView=F\u00FCr die Medienansicht verwenden
+folderUse.mediaView.disabled=Medienansicht deaktiviert
+folderUse.preview=Als Vorschau verwenden
+folderUse.preview.disabled=Vorschau deaktiviert
 formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 generate=Generieren
