--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -365,8 +365,12 @@ finished=Finished
 firstPage=First page
 folderImport=import from folder
 folderUse=Folder use
-folderUse.createFolderToSelectOne=Create a folder to select one
 folderUse.generatorSource=Use as source to generate contents
+folderUse.generatorSource.disabled=Content generation disabled
+folderUse.pageView=Use for the media view
+folderUse.mediaView.disabled=Media view disabled
+folderUse.preview=Use as preview
+folderUse.preview.disabled=Preview disabled
 formConfigurationMismatch=Form configuration mismatch\:
 from=from
 generate=Generate
