Add frontend pages for mass import

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -339,6 +339,7 @@ fileGroupAdd=Dateigruppe hinzuf\u00FCgen
 fileGroupDelete=Dateigruppe l\u00F6schen
 fileGroupEdit=Dateigruppe bearbeiten
 filename=Dateiname
+files=Dateien
 filter=Filter
 filterAnpassen=Filter anpassen
 filterAnwenden=Filter anwenden
@@ -400,6 +401,7 @@ hitlist=Trefferliste
 homeDirectory=Homeverzeichnis
 id=ID
 idImport=ID Import
+idList = Idliste
 imHomeVerzeichnisVerlinken=Im Homeverzeichnis verlinken
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Imageordner in Homeverzeichnis verlinken, obwohl ein anderer Nutzer gerade damit arbeitet.
 imageNumber=Bildnummer
@@ -563,6 +565,7 @@ newBatch=Neuer Batch
 newUser=Neuer Benutzer
 newUserGroup=Neue Benutzergruppe
 newLdapGroup=Neue LDAP-Gruppe
+next=Weiter
 no=Nein
 noBatchSelected=Es ist kein Batch ausgew\u00E4hlt.
 noFileSelected=Keine Datei ausgew\u00E4hlt.
