--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -337,8 +337,9 @@ fileGroupAdd=Add file group
 fileGroupDelete=Delete file group
 fileGroupEdit=Edit file group
 filename=File name
+files=Files
 filter=Filter
-filterAnpassen=adjust filter
+filterAnpassen=Adjust filter
 filterAnwenden=Apply filter
 finished=Finished
 firstPage=First page
@@ -398,6 +399,7 @@ hitlist=Hitlist
 homeDirectory=Home directory
 id=ID
 idImport=ID import
+idList = List ids
 imHomeVerzeichnisVerlinken=Link within home directory
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Link image folder in user home even though another user is working with this data.
 imageNumber=Image number
@@ -562,6 +564,7 @@ newBatch=New batch
 newUser=New user
 newUserGroup=New user group
 newLdapGroup=New LDAP group
+next=Next
 no=no
 noBatchSelected=There is no batch selected.
 noFileSelected=No file selected.
