Copy templates for projects

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -194,6 +194,7 @@ confirmDelete=L\u00F6schen best\u00E4tigen
 confirmDeleteProcess=Vorgang l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
 copy=Kopie
+copyTemplates=Projekt inkl. Templates kopieren
 correction=Korrektur
 correctionFor=Korrektur f\u00FCr Schritt
 correctionK=K
