--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -193,6 +193,7 @@ confirmDelete=Confirm delete
 confirmDeleteProcess=Delete process?
 confirmNewPassword=Confirm new password
 copy=copy
+copyTemplates=Copy Project including Templates
 correction=Correction
 correctionFor=Correction for step
 correctionK=C
