added user client relation select page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -172,6 +172,8 @@ clearData=Daten l\u00F6schen
 client=Mandant
 clientList=Mandantenliste
 clients=Mandanten
+clientAdd=Zu Mandanten hinzuf\u00FCgen
+clientDeleteFrom=Von Mandanten l\u00F6schen
 clientEdit=Mandant bearbeiten
 clientNew=Neuen Mandanten anlegen
 clientSaving=Mandant wird gespeichert...
