--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -171,6 +171,8 @@ clearData=Clear data
 client=Client
 clientList=Client list
 clients=Clients
+clientAdd=Add to clients
+clientDeleteFrom=Delete from client
 clientEdit=Edit client
 clientNew=Create new client
 clientSaving=Saving client...
