Escape umlauts correctly

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -274,7 +274,7 @@ editFolderDialog.caption.edit=Unterordner bearbeiten
 editFolderDialog.copyFolder=Beim DMS-Export kopieren
 editFolderDialog.createFolder=Leeren Ordner bei der Vorgangserstellung anlegen
 editFolderDialog.derivative=Skalierung
-editFolderDialog.dpi=Auflösung
+editFolderDialog.dpi=Aufl\u00F6sung
 editFolderDialog.fileGroup=METS-Filegroup
 editFolderDialog.generator.derivative=Derivat erstellen
 editFolderDialog.generator.dpi=DPI \u00E4ndern
