Move tasks from template to workflow

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -81,6 +81,7 @@ loginNotValid=Login '{0}' enth\u00E4lt ung\u00FCltige Zeichen oder ist auf Black
 errorMassDownloadProjectCreation=Der Projektordner {0} kann nicht erstellt werden.
 errorMetsEditorImageRenaming=Es kam zu einem Fehler w\u00E4hrend der Umbenennung der Bilder.
 errorMetsEditorMissingFile=Die Datei {0} kann im Ordner {1} nicht gefunden werden.
+errorMissingWorkflow=Produktionsvorlage mit ID {} fehlt ein Workflow.
 metadataDigitalDocumentError=DigitalDocument Fehler bei\: {0}
 metadataEditorThreadLock=Ein anderer Vorgang wurde im Hintergrund ge\u00F6ffnet. Bitte versuchen Sie es in einigen Sekunden erneut.
 metadataError=Es gab einen schwerwiegenden Fehler in der Metadaten-Datei. M\u00F6glicherweise gingen Daten verloren. Bitte benachrichtigen Sie Ihren Administrator damit er sich dieses Problem ansehen kann.
