--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -79,6 +79,7 @@ loginNotValid=Login '{0}' uses not valid characters or is on black list.
 errorMassDownloadProjectCreation=The project folder {0} could not be created.
 errorMetsEditorImageRenaming=There was an error during the renaming of images.
 errorMetsEditorMissingFile=The file {0} can not be found in {1} folder.
+errorMissingWorkflow=Template with id {} is missing workflow.
 metadataDigitalDocumentError=DigitalDocument error at\: {0}
 metadataEditorThreadLock=Another file gets processed in the background. Please try again after some seconds.
 metadataError=Critical error within the metadata file with a possible loss of data. Please inform the administrator.
