Move login validation to UserService

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -454,7 +454,7 @@ location=Standort
 login=Login
 loginInUse=Login ist bereits vergeben
 loginNoteText=Kitodo.Production ist das Workflowmanagementmodul der Kitodo-Suite. Es unterst\u00FCtzt den Digitalisierungsprozess von verschiedenen Materialarten wie z.B. Drucken, Periodika, Handschriften, Noten und Musikalien, Einblattmedien und Dokumentennachl\u00E4ssen.
-loginNotValid=Login enth\u00E4lt ung\u00FCltige Zeichen
+loginNotValid=Login '{0}' enth\u00E4lt ung\u00FCltige Zeichen oder ist auf Blackliste.
 logout=Logout
 manifestationType=Typ
 # manuellMultiWorkflow is used in TaskEditType enum
