--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -452,7 +452,7 @@ location=Location
 login=Login
 loginInUse=Login already in use
 loginNoteText=Kitodo.Production is the workflow management module in the Kitodo suite. It supports the process of digitising a range of material types, such as books, periodicals, manuscripts, printed music, single-sheet media, and document collections.
-loginNotValid=Login uses not valid characters
+loginNotValid=Login '{0}' uses not valid characters or is on black list.
 logout=Log out
 manifestationType=type
 # manuellMultiWorkflow is used in TaskEditType enum
