Add missing translation

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -552,6 +552,7 @@ metadataTimes=mal
 metadataToManyElements=darf nur einmal vorhanden sein, existiert aber
 metadataWithValue=mit dem Wert
 metadataView=Metadaten betrachten
+metadataSaving=Metadaten werden gespeichert
 metadataShowImage=Bild anzeigen
 metadataSortByRuleset=Sortierung der Metadaten wie im Regelsatz (sonst alphabetisch)
 metadatenBearbeiten=Metadaten bearbeiten
