--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -550,6 +550,7 @@ metadataTimes=times
 metadataToManyElements=may exist only once, but exists
 metadataWithValue=with the value
 metadataView=View metadata
+metadataSaving=Saving metadata
 metadataShowImage=Show image
 metadataSortByRuleset=Order metadata as in ruleset (otherwise alphabetically)
 metadatenBearbeiten=Edit metadata
