Show toggle button in step now works

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -382,6 +382,7 @@ folderUse.preview.disabled=Vorschau deaktiviert
 formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 generate=Generieren
+generator={0}-Images erzeugen
 gesamtesTrefferset=Gesamtes Trefferset
 gesamtesTreffersetInMeinHomeverzeichnis=Gesamtes Trefferset in mein Homeverzeichnis laden
 getNormDataRecord=laden
