--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -380,6 +380,7 @@ folderUse.preview.disabled=Preview disabled
 formConfigurationMismatch=Form configuration mismatch\:
 from=from
 generate=Generate
+generator=Generate {0} images
 gesamtesTrefferset=All hits
 gesamtesTreffersetInMeinHomeverzeichnis=Put all hits in my home directory
 getNormDataRecord=load
