Add manually executing of image generator

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -382,6 +382,8 @@ folderUse.preview.disabled=Vorschau deaktiviert
 formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 generate=Generieren
+generateMissingImages=Das Generieren aller fehlenden Bilder starten
+generateMissingImagesStarted=Alle fehlenden Bilder werden vom Taskmanager generieren gelassen
 generator={0}-Images erzeugen
 gesamtesTrefferset=Gesamtes Trefferset
 gesamtesTreffersetInMeinHomeverzeichnis=Gesamtes Trefferset in mein Homeverzeichnis laden
@@ -437,6 +439,7 @@ idImport=ID Import
 idList = Idliste
 imHomeVerzeichnisVerlinken=Im Homeverzeichnis verlinken
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Imageordner in Homeverzeichnis verlinken, obwohl ein anderer Nutzer gerade damit arbeitet.
+ImageGeneratorTask=Bilder generieren
 imageNumber=Bildnummer
 imagePaginationError=Es wurden {1} Bilder gefunden, aber {0} Bilder erwartet. Bitte \u00FCberpr\u00FCfen Sie die Paginierung.
 imageSelection=Datei ausw\u00E4hlen
@@ -695,6 +698,10 @@ queryOPAC=OPAC abfragen
 ready=Fertig
 recordImport=Datensatz-Import
 records=Datens\u00E4tze
+regenerateAllImages=Das neu Generieren aller Bilder starten
+regenerateAllImagesStarted=Alle Bilder werden vom Taskmanager neu generieren gelassen
+regenerateMissingAndDamagedImages=Das neu Generieren aller fehlenden und besch\u00E4digten Bilder starten
+regenerateMissingAndDamagedImagesStarted=Alle fehlenden und besch\u00E4digten Bilder werden vom Taskmanager neu generieren gelassen
 reload=Aktualisieren
 removeFilter=Filter entfernen
 removeFromAssociatedBatch=Selektierte Vorg\u00E4nge von ihren zugewiesenen Batches entfernen
@@ -796,6 +803,7 @@ templateProperty=Vorlageneigenschaft
 templateProperties=Vorlageneigenschaften
 templateTitle=Vorlagentitel
 termsOfUse=Nutzungsbedingungen
+threeCogwheels=Drei Zahnr\u00E4der
 tifHeaderDocumentName=Tif-Header Documentname
 tifHeaderImageDescription=Tif-Header Image-Beschreibung
 timeZone.+01\:00=MEZ
