--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -380,6 +380,8 @@ folderUse.preview.disabled=Preview disabled
 formConfigurationMismatch=Form configuration mismatch\:
 from=from
 generate=Generate
+generateMissingImages=Start the generation of all missing images
+generateMissingImagesStarted=The task manager is having all missing images generated
 generator=Generate {0} images
 gesamtesTrefferset=All hits
 gesamtesTreffersetInMeinHomeverzeichnis=Put all hits in my home directory
@@ -435,6 +437,7 @@ idImport=ID import
 idList = List ids
 imHomeVerzeichnisVerlinken=Link within home directory
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Link image folder in user home even though another user is working with this data.
+ImageGeneratorTask=Generating images
 imageNumber=Image number
 imageVisualization=Image visualization
 imagePaginationError={1} images found but {0} images expected. Please check the pagination.
@@ -693,6 +696,10 @@ queryOPAC=Query OPAC
 ready=Ready
 recordImport=record import
 records=records
+regenerateAllImages=Start the regeneration of all images
+regenerateAllImagesStarted=The task manager is having all images regenerated
+regenerateMissingAndDamagedImages=Start the regeneration of all missing or damaged images
+regenerateMissingAndDamagedImagesStarted=The task manager is having all missing or damaged images regenerated
 reload=reload
 removeFilter=Remove filter from list
 removeFromAssociatedBatch=remove selected processes from assigned batches
@@ -794,6 +801,7 @@ templateProperty=template property
 templateProperties=Template properties
 templateTitle=Template title
 termsOfUse=Terms of use
+threeCogwheels=three cogwheels
 tifHeaderDocumentName=Tiff header document name
 tifHeaderImageDescription=Tiff header image description
 timeZone.+01\:00=CET
