added frontend pages for editing and creating ldap servers

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -492,6 +492,12 @@ ldapGroup=LDAP-Gruppe
 ldapGroupEdit=LDAP-Gruppe bearbeiten
 ldapGroupView=LDAP-Gruppe anzeigen
 ldapGroups=LDAP-Gruppen
+ldapServers=LDAP-Server
+ldapServer=LDAP-Server
+ldapServerEdit=LDAP-Server bearbeiten
+ldapServerView=LDAP-Server anzeigen
+ldapServerSaving=LDAP-Server wird gespeichert...
+newLdapServer=Neuer LDAP-Server
 ldaplogin=LDAP login
 link=Verkn\u00FCpfung
 loadAllProcesses=Alle Vorg\u00E4nge laden
@@ -611,6 +617,7 @@ newBatch=Neuer Batch
 newUser=Neuer Benutzer
 newUserGroup=Neue Benutzergruppe
 newLdapGroup=Neue LDAP-Gruppe
+ldapServerNew=Neuen LDAP-Server anlegen
 next=Weiter
 no=Nein
 noBatchSelected=Es ist kein Batch ausgew\u00E4hlt.
@@ -848,6 +855,7 @@ uploadFailed=Das Hochladen ist fehlgeschlagen.
 uploadFile=Datei hochladen
 uploadImport=Dateiupload-Import
 uriMalformed=Der URI hat ein falsches Format.
+url=URL
 user=Benutzer
 username=Benutzername
 users=Benutzer
