--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -491,6 +491,12 @@ ldapGroupEdit=Edit LDAP group
 ldapGroupView=View LDAP group
 ldapGroups=LDAP groups
 ldaplogin=LDAP login
+ldapServers=LDAP-servers
+ldapServer=LDAP-server
+ldapServerEdit=Edit LDAP-server
+ldapServerView=View LDAP-server
+ldapServerSaving=Saving LDAP-Server...
+ldapServerNew=Add new LDAP server
 link=Link
 loadAllProcesses=Load all processes
 loadAssociatedBatchOfProcess=Highlight the batches containing the chosen processes
@@ -610,6 +616,7 @@ newBatch=New batch
 newUser=New user
 newUserGroup=New user group
 newLdapGroup=New LDAP group
+newLdapServer=New LDAP server
 next=Next
 no=no
 noBatchSelected=There is no batch selected.
@@ -846,6 +853,7 @@ uploadFailed=Upload failed.
 uploadFile=upload file
 uploadImport=file upload import
 uriMalformed=The URI is malformed.
+url=URL
 user=User
 username=Username
 users=Users
