added button switching usage of ldap and database authentication

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -484,6 +484,7 @@ lastPage=Letzte Seite
 lastPageAdd=Als letzte Seite einf\u00FCgen
 lastUpdatedBy=Letzte Aktualisierung durch
 docketPrint=Laufzettel drucken
+ldapActiveNote=LDAP-Authentifizierung aktiv
 ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
 ldapWritten=LDAP Konfiguration erfolgreich geschrieben f\u00FCr\:
 # ldapgroupSaving is used in ldapgroupEdit.xhtml - line 39
