--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -482,6 +482,7 @@ lastPage=Last page
 lastPageAdd=Insert as last page
 lastUpdatedBy=Last updated by
 docketPrint=Print docket
+ldapActiveNote=LDAP authentication active
 ldapKonfigurationSchreiben=Write LDAP configuration
 ldapWritten=LDAP configuration successfully written for user\: ????
 # ldapgroupSaving is used in ldapgroupEdit.xhtml - line 39
