Generation of images

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -251,6 +251,7 @@ details=Details
 detailsDesArbeitsschritts=Details der Aufgabe
 detailsDesSchritts=Details der Aufgabe
 detailsOfBatch=Batchdetails
+determineWhichImagesNeedToBeGenerated=\u00DCberpr\u00FCfe {0}
 diesenSchrittAbschliessen=Die Bearbeitung dieser Aufgabe abschlie\u00DFen
 digitalCollections=Digitale Kollektionen
 directory=Verzeichnis
@@ -390,6 +391,7 @@ folderUse.preview.disabled=Vorschau deaktiviert
 formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 generate=Generieren
+generateImages=Generiere {0}
 generateMissingImages=Das Generieren aller fehlenden Bilder starten
 generateMissingImagesStarted=Alle fehlenden Bilder werden vom Taskmanager generieren gelassen
 generator={0}-Images erzeugen
@@ -492,6 +494,7 @@ ldapGroupEdit=LDAP-Gruppe bearbeiten
 ldapGroupView=LDAP-Gruppe anzeigen
 ldapGroups=LDAP-Gruppen
 ldaplogin=LDAP login
+listSourceFolder=Suche nach Dateien
 loadAllProcesses=Alle Vorg\u00E4nge laden
 loadAssociatedBatchOfProcess=Die enthaltenden Batches der gew\u00E4hlten Vorg\u00E4nge ausw\u00E4hlen
 loadProcessesOfBatch=Vorg\u00E4nge des/der ausgew\u00E4hlten Batches laden
