--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -250,6 +250,7 @@ details=Details
 detailsDesArbeitsschritts=Details of the task
 detailsDesSchritts=Details of the task
 detailsOfBatch=batch details
+determineWhichImagesNeedToBeGenerated=Checking {0}
 diesenSchrittAbschliessen=Finish this task
 digitalCollections=Digital collections
 directory=Folder
@@ -388,6 +389,7 @@ folderUse.preview.disabled=Preview disabled
 formConfigurationMismatch=Form configuration mismatch\:
 from=from
 generate=Generate
+generateImages=Generating {0}
 generateMissingImages=Start the generation of all missing images
 generateMissingImagesStarted=The task manager is having all missing images generated
 generator=Generate {0} images
@@ -490,6 +492,7 @@ ldapGroupEdit=Edit LDAP group
 ldapGroupView=View LDAP group
 ldapGroups=LDAP groups
 ldaplogin=LDAP login
+listSourceFolder=Searching for files
 loadAllProcesses=Load all processes
 loadAssociatedBatchOfProcess=Highlight the batches containing the chosen processes
 loadProcessesOfBatch=load processes of the selected batch
