added pagination after creation of dummyImages

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -469,8 +469,10 @@ imprint=Impressum
 inBearbeitungDurch=In Bearbeitung durch
 indexedEntries=Indexierte Eintr\u00E4ge
 indexing=Indexierung
+insert=Einf\u00FCgen
 insertAsUncounted=Als unnummeriert einf\u00FCgen
 insertIntoPagination=In Paginierungssequenz einf\u00FCgen
+insertNewImages=Neue Bilder einf\u00FCgen
 internFileFormat=Internes Speicherformat
 invalidIdentifierCharacter=Der Wert des Identifiers {0} im Strukturelement {1} enth\u00E4lt ung\u00FCltige Zeichen.
 invalidIdentifierSame=Der Wert des Identifiers {0} enth\u00E4lt die gleichen Werte in {1} und {2}.
