--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -467,8 +467,10 @@ imprint=Imprint
 inBearbeitungDurch=In edition by
 indexedEntries=Indexed entries
 indexing=Indexing
+insert=Insert
 insertAsUncounted=Insert as uncounted
 insertIntoPagination=Paste to pagination sequence
+insertNewImages=Insert new images
 internFileFormat=Internal file format
 invalidIdentifierCharacter=The value of the identifier {0} of the structural element {1} contains invalid characters.
 invalidIdentifierSame=The value of the identifier {0} contains the same values in {1} and {2}.
