fixed drag drop structure elements, added page relations dialog, changed structure labels to logical page number

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -453,6 +453,7 @@ imageNumber=Bildnummer
 imagePaginationError=Es wurden {1} Bilder gefunden, aber {0} Bilder erwartet. Bitte \u00FCberpr\u00FCfen Sie die Paginierung.
 imageSelection=Datei ausw\u00E4hlen
 imageVisualization=Bildanzeige
+image=Bild
 images=Bilder
 imagesDurchschnitt=Images Durchschnitt
 imagesGesamt=Images gesamt
