--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -451,6 +451,7 @@ imageNumber=Image number
 imageVisualization=Image visualization
 imagePaginationError={1} images found but {0} images expected. Please check the pagination.
 imageSelection=Select file
+image=Image
 images=Images
 imagesDurchschnitt=Images average
 imagesGesamt=Images total
