Translate 'copyToClipboard' string in growl messages

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -684,6 +684,8 @@ statusOffen=Open
 statusRunterSetzen=Move status down
 stepDoneByUser=Step done by user
 stop=Stop
+stringCopiedSuccess=String copied to clipboard:
+stringCopiedError=Error copying string to clipboard:
 structureData=Structure data
 strukturdatenBearbeiten=Edit structure data
 structureElementAdd=Add docstruct
