Add delete functionality to workflow page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -201,6 +201,7 @@ confirmDeleteProject=Projekt l\u00F6schen?
 confirmDeleteRuleset=Regelsatz l\u00F6schen?
 confirmDeleteUser=Benutzer l\u00F6schen?
 confirmDeleteUsergroup=Benutzergruppe l\u00F6schen?
+confirmDeleteWorkflow=Workflow l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
 copy=Kopie
 copyTemplates=Projekt inkl. Templates kopieren
@@ -818,6 +819,7 @@ taskSaving=Aufgabe wird gespeichert...
 tasks=Aufgaben
 tasksCurrent=Meine Aufgaben
 technischeDaten=Technische Daten
+templateAssignedError=Der Workflow kann nicht gel\u00F6scht werden, da diesem Produktionsvorlagen zugewiesen sind.
 templateDetails=Produktionsvorlagendetails
 templateProperty=Vorlageneigenschaft
 templateProperties=Vorlageneigenschaften
