--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -200,6 +200,7 @@ confirmDeleteProject=Delete project?
 confirmDeleteRuleset=Delete ruleset?
 confirmDeleteUser=Delete user?
 confirmDeleteUsergroup=Delete user group?
+confirmDeleteWorkflow=Delete workflow?
 confirmNewPassword=Confirm new password
 copy=copy
 copyTemplates=Copy Project including Templates
@@ -816,6 +817,7 @@ taskSaving=Saving task...
 tasks=Tasks
 tasksCurrent=My tasks
 technischeDaten=Technical data
+templateAssignedError=The workflow could not be deleted because there are already assigned templates.
 templateDetails=Template details
 templateProperty=template property
 templateProperties=Template properties
