--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -199,6 +199,7 @@ confirmDeleteLdapgroup=LDAP-Gruppe l\u00F6schen?
 confirmDeleteProcess=Vorgang l\u00F6schen?
 confirmDeleteProject=Projekt l\u00F6schen?
 confirmDeleteRuleset=Regelsatz l\u00F6schen?
+confirmDeleteTemplate=Produktionsvorlage l\u00F6schen?
 confirmDeleteUser=Benutzer l\u00F6schen?
 confirmDeleteUsergroup=Benutzergruppe l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
@@ -673,6 +674,7 @@ position=Position
 ppn=PPN
 priority=Priorit\u00E4t
 process=Vorgang
+processAssignedError=Diese Produktionsvorlage kann nicht gel\u00F6scht werden, da dieser Vorg\u00E4nge zugewiesen sind.
 processCreationErrorFieldIsEmpty=enth\u00E4lt keinen Wert.
 processCreationErrorNoCollection=keine Kollektion angegeben.
 processCreationErrorTitleAlreadyInUse=der Vorgangstitel ist bereits vergeben.
