--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -198,6 +198,7 @@ confirmDeleteLdapgroup=Delete LDAP group?
 confirmDeleteProcess=Delete process?
 confirmDeleteProject=Delete project?
 confirmDeleteRuleset=Delete ruleset?
+confirmDeleteTemplate=Delete template?
 confirmDeleteUser=Delete user?
 confirmDeleteUsergroup=Delete user group?
 confirmNewPassword=Confirm new password
@@ -672,6 +673,7 @@ position=Position
 ppn=PPN
 priority=Priority
 process=Process
+processAssignedError=The template could not be deleted because there are already assigned processes.
 processCreationErrorFieldIsEmpty=contains no value.
 processCreationErrorNoCollection=no collection stated.
 processCreationErrorTitleAlreadyInUse=the process title is already assigned
