Prevent creation of docket with the same title

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -273,6 +273,7 @@ docketNotFound=Die angegebene Datei konnte nicht gefunden werden.
 dockets=Laufzettel
 # docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Laufzettel wird gespeichert...
+docketTitleDuplicated=Der Laufzettel mit den gleichen Titel existiert schon.
 docstructAnAndereStelleSchieben=Strukturelement an andere Stelle schieben
 docstructNachObenSchieben=Strukturelement nach oben schieben
 docstructNachUntenSchieben=Strukturelement nach unten schieben
