--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -272,6 +272,7 @@ docketNotFound=The specified file could not be found.
 dockets=Dockets
 # docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Saving docket...
+docketTitleDuplicated=The docket with exact title exists already.
 docstructAnAndereStelleSchieben=Move docstruct to other location
 docstructNachObenSchieben=Move docstruct up
 docstructNachUntenSchieben=Move docstruct down
