Prevent creation of ruleset with the same title

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -743,6 +743,7 @@ rulesetNotFound=Die angegebene Regelsatzdatei konnte nicht gefunden werden.
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
 rulesetSaving=Regelsatz wird gespeichert...
 rulesets=Regels\u00E4tze
+rulesetTitleDuplicated=Der Regelsatz mit den gleichen Titel existiert schon.
 saveConfiguration=Konfigurationsdatei speichern
 script=Skript
 scriptExecute=Skript ausf\u00FChren
