--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -272,7 +272,7 @@ docketNotFound=The specified file could not be found.
 dockets=Dockets
 # docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Saving docket...
-docketTitleDuplicated=The docket with exact title exists already.
+docketTitleDuplicated=The docket with the same title exists already.
 docstructAnAndereStelleSchieben=Move docstruct to other location
 docstructNachObenSchieben=Move docstruct up
 docstructNachUntenSchieben=Move docstruct down
@@ -741,6 +741,7 @@ rulesetNotFound=The specified ruleset could not be found.
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
 rulesetSaving=Saving ruleset...
 rulesets=Rule sets
+rulesetTitleDuplicated=The ruleset with the same title exists already.
 saveConfiguration=Save configuration file
 script=Script
 scriptExecute=Execute script
