Add frontend for copy template

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -276,6 +276,7 @@ down=unter
 download=Images herunterladen
 duplicate=Duplizieren
 duplicateProject=Projekt duplizieren
+duplicateTemplate=Produktionsvorlage duplizieren
 duplicateWorkflow=Workflow duplizieren
 duration=Laufzeit
 editDocket=Laufzettel bearbeiten
