--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -275,6 +275,7 @@ down=down
 download=Download images
 duplicate=duplicate
 duplicateProject=Duplicate project
+duplicateTemplate=Duplicate template
 duplicateWorkflow=Duplicate workflow
 duration=Duration
 editDocket=edit docket
