--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -829,6 +829,7 @@ typeSetLogistic=Logistik
 typeSetNewspaper=Zeitung
 typeSetSerial=fortlaufendes Sammelwerk
 unableToDuplicateProject=Fehler: Projekt konnte nicht dupliziert werden!
+unableToDuplicateTemplate=Fehler: Produktionsvorlage konnte nicht dupliziert werden!
 unableToDuplicateWorkflow=Fehler: Workflow konnte nicht dupliziert werden!
 unableToRegisterObject=Objekt konnte nicht registriert werden
 unableToRetrieveTask=Aufgabe konnte nicht geladen werden!
