--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -827,6 +827,7 @@ typeSetLogistic=Logistics
 typeSetNewspaper=newspaper
 typeSetSerial=serial publications
 unableToDuplicateProject=Error: Unable to duplicate project!
+unableToDuplicateTemplate=Error: Unable to duplicate template!
 unableToDuplicateWorkflow=Error: Unable to duplicate workflow!
 unableToRegisterObject=Couldn't register object
 unableToRetrieveTask=Unable to retrieve the requested task!
