Adjust frontend for copy workflow

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -283,6 +283,7 @@ down=down
 download=Download images
 duplicate=duplicate
 duplicateProject=Duplicate project
+duplicateWorkflow=Duplicate workflow
 duration=Duration
 editDocket=edit docket
 editFolderDialog.caption.add=Add subfolder
