--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -284,6 +284,7 @@ down=unter
 download=Images herunterladen
 duplicate=Duplizieren
 duplicateProject=Projekt duplizieren
+duplicateWorkflow=Workflow duplizieren
 duration=Laufzeit
 editDocket=Laufzettel bearbeiten
 editFolderDialog.caption.add=Unterordner hinzuf\u00FCgen
