Add backend functionality for copying of workflow

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -847,6 +847,7 @@ typeSetLogistic=Logistik
 typeSetNewspaper=Zeitung
 typeSetSerial=fortlaufendes Sammelwerk
 unableToDuplicateProject=Fehler: Projekt konnte nicht dupliziert werden!
+unableToDuplicateWorkflow=Fehler: Workflow konnte nicht dupliziert werden!
 unableToRegisterObject=Objekt konnte nicht registriert werden
 unableToRetrieveTask=Aufgabe konnte nicht geladen werden!
 unableToRetrieveTemplates=Fehler: Templates konnten nicht geladen werden!
