--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -845,6 +845,7 @@ typeSetLogistic=Logistics
 typeSetNewspaper=newspaper
 typeSetSerial=serial publications
 unableToDuplicateProject=Error: Unable to duplicate project!
+unableToDuplicateWorkflow=Error: Unable to duplicate workflow!
 unableToRegisterObject=Couldn't register object
 unableToRetrieveTask=Unable to retrieve the requested task!
 unableToRetrieveTemplates=Error: Unable to retrieve templates!
