Restore missing functionalities for process list - single process

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -59,6 +59,7 @@ arabic=arabisch
 assigned=Zugewiesen
 ats=ATS
 ausGruppeLoeschen=Benutzer aus der Benutzergruppe l\u00F6schen
+deleteLinkHomeDirectory=Verlinkung aus Homeverzeichnis entfernen
 ausgewaehltesStrukturelement=Ausgew\u00E4hltes Strukturelement
 actions=Aktionen
 automatic=automatisch
@@ -436,7 +437,7 @@ homeDirectory=Homeverzeichnis
 id=ID
 idImport=ID Import
 idList = Idliste
-imHomeVerzeichnisVerlinken=Im Homeverzeichnis verlinken
+linkHomeDirectory=Im Homeverzeichnis verlinken
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Imageordner in Homeverzeichnis verlinken, obwohl ein anderer Nutzer gerade damit arbeitet.
 imageNumber=Bildnummer
 imagePaginationError=Es wurden {1} Bilder gefunden, aber {0} Bilder erwartet. Bitte \u00FCberpr\u00FCfen Sie die Paginierung.
