--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -59,6 +59,7 @@ arabic=Arabic
 assigned=Assigned
 ats=ATS
 ausGruppeLoeschen=Delete user from group
+deleteLinkHomeDirectory=Remove link from home directory
 ausgewaehltesStrukturelement=Selected docstruct
 actions=Actions
 automatic=automatic
@@ -434,7 +435,7 @@ homeDirectory=Home directory
 id=ID
 idImport=ID import
 idList = List ids
-imHomeVerzeichnisVerlinken=Link within home directory
+linkHomeDirectory=Link within home directory
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Link image folder in user home even though another user is working with this data.
 imageNumber=Image number
 imageVisualization=Image visualization
