Add missing translations

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -578,6 +578,7 @@ possibleActions=M\u00F6gliche Aktionen
 month=Monat
 months=Monate
 multipleBatchesAssigned=Dieser Vorgang ist mehreren Batches zugeordnet. Um diese Funktion zu nutzen, darf der Vorgang nur genau einem Batch zugeordnet sein.
+name=Name
 neu=Neuen Datensatz anlegen
 neueMetadatenHinzufuegen=Neue Metadaten hinzuf\u00FCgen
 neuePersonAnlegen=Neue Person anlegen
