Add script for batch create

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -293,6 +293,8 @@ editor=Editor
 createProcessFromTemplate=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
 elasticSearchNotRunning=Der Elasticsearch Server ist nicht erreichbar.
 endDate=Enddatum
+# used in batchList.xhtml
+enterBatchName=Sie k\u00F6nnen einen Namen f\u00FCr den Batch angeben\:
 erscheinungsjahr=Erscheinungsjahr
 erscheinungsort=Erscheinungsort
 erstellungsdatum=Erstellungsdatum
