--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -295,6 +295,8 @@ editor=Editor
 createProcessFromTemplate=Create process from this process template
 elasticSearchNotRunning=The elastic search server is not running
 endDate=End date
+# used in batchList.xhtml
+enterBatchName=Please enter a name for the batch\:
 erscheinungsjahr=Year of publication
 erscheinungsort=Place of publication
 erstellungsdatum=Date created
