Unify properties displayed in task edit

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -75,7 +75,7 @@ batch_type_logistic=logistics
 batch_type_newspaper=newspaper
 batch_type_serial=serial publication
 batchProperties=batch properties
-batchStep=batch step
+batchStep=Batch task
 batches=Batches
 edit=Edit
 bearbeitungDiesesSchrittesAbgeben=Release edition of this task
