Add option to display and edit TermsOfUse, DataPrivacy and Imprint texts

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -37,6 +37,7 @@ addToBatch=Vorgang wurde zur Gruppe {0} hinzugef\u00FCgt.
 addToProcessLog=Zu Vorgangslog hinzuf\u00FCgen
 addToSelectedBatch=Selektierte Vorg\u00E4nge zu ausgew\u00E4hltem Batch hinzuf\u00FCgen
 additionalDetails=Zus\u00E4tzliche Details
+adjustSettingText=Ihr Administrator kann diese Einstellung unter System => Rechtliches konfigurieren!
 administration=Administration
 # administrativ is supposedly use for translation of TaskEditType
 administrativ=administrativ
@@ -219,6 +220,8 @@ dataCopier.runtimeException=Fehler beim Kopieren der Daten\:
 file=Datei
 dashboard=Dashboard
 dataPrivacy=Datenschutz
+# used in "LegalTexts.java"
+dataPrivacyDefaultText=Datenschutzinformationen f\u00FCr dieses System wurden noch nicht hinterlegt.
 databaseStatistic=Datenbankstatistik
 day=Tag
 days=Tage
@@ -401,6 +404,8 @@ importFiles=Dateien importieren
 importMittelsFileUpload=Import mittels Dateiupload
 importPlugin=Plugin f\u00FCr den Import
 imprint=Impressum
+# used in "LegalTexts.java"
+imprintDefaultText=Das Impressum f\u00FCr dieses System wurde noch nicht hinterlegt.
 inBearbeitungDurch=In Bearbeitung durch
 indexedEntries=Indexierte Eintr\u00E4ge
 indexing=Indexierung
@@ -435,6 +440,7 @@ ldapServerView=LDAP-Server anzeigen
 ldapServerSaving=LDAP-Server wird gespeichert...
 newLdapServer=Neuer LDAP-Server
 ldaplogin=LDAP login
+legal=Rechtliches
 link=Verkn\u00FCpfung
 linkImage=Bild verlinken
 loadAllProcesses=Alle Vorg\u00E4nge laden
@@ -715,6 +721,8 @@ templateProperties=Vorlageneigenschaften
 templateTitle=Produktionsvorlagentitel
 templates=Produktionsvorlagen
 termsOfUse=Nutzungsbedingungen
+# used in "LegalTexts.java"
+termsOfUseDefaultText=Die Nutzungsbedingungen f\u00FCr dieses System wurden noch nicht hinterlegt.
 tifHeaderDocumentName=Tif-Header Documentname
 tifHeaderImageDescription=Tif-Header Image-Beschreibung
 timeZone.+01\:00=MEZ
