--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -38,6 +38,7 @@ addToBatch=Added process to batch {0}.
 addToProcessLog=add to process log
 addToSelectedBatch=add selected processes to selected batch
 additionalDetails=Additional details
+adjustSettingText=Your administrator can adjust the corresponding settings under System => Legal!
 administration=Administration
 # administrativ is supposedly use for translation of TaskEditType
 administrativ=administrative
@@ -221,6 +222,8 @@ dataCopier.runtimeException=Copying the data failed\:
 file=File
 dashboard=Dashboard
 dataPrivacy=Data privacy
+# used in "LegalTexts.java"
+dataPrivacyDefaultText=Data privacy information have not been configured for this system.
 databaseStatistic=Database statistics
 day=day
 days=days
@@ -402,6 +405,8 @@ importedBatchLabel=Imported from {0}, {1}
 importingData=Importing data...
 importPlugin=import Plugin
 imprint=Imprint
+# used in "LegalTexts.java"
+imprintDefaultText=Imprint information have not been configured for this system.
 inBearbeitungDurch=In edition by
 indexedEntries=Indexed entries
 indexing=Indexing
@@ -436,6 +441,7 @@ ldapServerEdit=Edit LDAP-server
 ldapServerView=View LDAP-server
 ldapServerSaving=Saving LDAP-Server...
 ldapServerNew=Add new LDAP server
+legal=Legal
 link=Link
 linkImage=Link image
 loadAllProcesses=Load all processes
@@ -714,6 +720,8 @@ templateProperties=Template properties
 templates=Process templates
 templateTitle=Template title
 termsOfUse=Terms of use
+# used in "LegalTexts.java"
+termsOfUseDefaultText=Terms of use have not been configured for this system.
 tifHeaderDocumentName=Tiff header document name
 tifHeaderImageDescription=Tiff header image description
 timeZone.+01\:00=CET
