Restore frontend for batch properties edit

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -583,6 +583,7 @@ processList=Vorgangsliste
 processManagement=Verwaltung
 processProperties=Vorgangseigenschaft
 processSaving=Vorgang wird gespeichert...
+processesSaving=Vorgänge werden gespeichert...
 processTitle=Vorgangstitel
 processes=Vorg\u00E4nge
 processesInThisBatch=Vorg\u00E4nge in diesem Batch
@@ -603,6 +604,7 @@ projects=Projekte
 # projectSaving is used in projectEdit.xhtml - line 32
 projectSaving=Projekt wird gespeichert...
 properties=Eigenschaften
+propertiesExtended=Erweiterte Eigenschaften
 propertiesSaved=Eigenschaften wurden gespeichert.
 property=Eigenschaft
 propertyAdd=Eigenschaft hinzuf\u00FCgen
