--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -72,7 +72,7 @@ batch=batch
 batch_type_logistic=logistics
 batch_type_newspaper=newspaper
 batch_type_serial=serial publication
-batchProperties=batch properties
+batchProperties=Batch properties
 batchStep=Batch task
 batches=Batches
 edit=Edit
@@ -583,6 +583,7 @@ processList=Process list
 processManagement=Process management
 processProperties=process property
 processSaving=Saving process...
+processesSaving=Saving processes...
 processTitle=Process title
 processes=Processes
 processesInThisBatch=processes of this batch
@@ -602,6 +603,7 @@ projectProgress=Project progress
 projects=Projects
 projectSaving=Saving project...
 properties=Properties
+propertiesExtended=Extended properties
 propertiesSaved=Property saved.
 property=Property
 propertyAdd=Add property
